# fireplace

./: Dockerfile  Dockerfile.rust-static  Makefile  README.md  deps
Dockerfiles/: Dockerfile.debian  Dockerfile.devuan
fireplace/: Cargo.toml
fireplace/src/: logger.rs  main.rs
fireplace_flavors/code/: Cargo.toml
fireplace_flavors/code/src/: logger.rs  main.rs
fireplace_flavors/json/: Cargo.toml
fireplace_flavors/json/src/: logger.rs  main.rs
